--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <h1>Hello, world</h1>
-    <div id="app">
-      <single-file-component></single-file-component>
+    <div id="MqttVueContactForm">
+     
     </div>
   </body>
 </html>
