--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Hello, world</h1>
     <div id="MqttVueContactForm">
-     
+      <Component title="My first property"/>
     </div>
   </body>
 </html>
