--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>Hello, world</h1>
     <div id="MqttVueContactForm">
       <Component v-slot="slotProps" title="slotProps is the real deal!">
-        {{ slotProps.title }}
+        {{ slotProps.title }}: {{ slotProps.message }}
       </Component>
     </div>
   </body>
