--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="https://unpkg.com/vue@v3.2.47"></script>
+    <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
     <script type="module"></script>
   </head>
   <body>
@@ -28,6 +29,7 @@
       components: { Component },
       setup() {
         const mqttHost = "public.trxbroker.org:1833";
+        const mqttClient = mqtt.connect("ws://public.trxbroker.org:9001/mqtt ");
         const fullName = "";
         const email = "";
         const message = "";
