Moved all logic to component.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <div id="MqttVueContactForm">
       <Component :mqtt-host="mqttHost" v-slot="slotProps">
         <label>Name:</label><br />
-        <input v-model="form.name" name="fullName" /><br />
+        <input v-model="slotProps.form.name" name="fullName" /><br />
 
         <label>Email:</label><br />
-        <input v-model="form.email" name="email" /><br />
+        <input v-model="slotProps.form.email" name="email" /><br />
 
         <label>Message:</label><br />
-        <textarea v-model="form.message" name="message"></textarea><br />
+        <textarea v-model="slotProps.form.message" name="message"></textarea
+        ><br />
 
-        <button @click="submit(slotProps)">Submit</button>
+        <button @click="slotProps.submit">Submit</button><br />
       </Component>
     </div>
   </body>
@@ -27,15 +28,8 @@
       components: { Component },
       data() {
         return {
-          form: {},
-          mqttHost: "ws://public.trxbroker.org:9001/mqtt"
-        }
-      },
-      methods: {
-        submit(slotProps) {
-          slotProps.submit(this.form);
-          this.form = {}
-        },
+          mqttHost: "ws://public.trxbroker.org:9001/mqtt",
+        };
       },
     }).mount("#MqttVueContactForm");
   </script>
