Add production hint for component import.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
   </body>
   <script type="module">
+    // import Component from "https://unpkg.com/@trx-base/mqtt-vue-contact-form";  //production
     import Component from "./dist/component.js";
     Vue.createApp({
       components: { Component },
