Changed form to standardized value.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <div id="MqttVueContactForm">
       <Component :mqtt-host="mqttHost" v-slot="slotProps">
         <label>Name:</label><br />
-        <input v-model="slotProps.form.name" name="fullName" /><br />
+        <input v-model="slotProps.value.name" name="fullName" /><br />
 
         <label>Email:</label><br />
-        <input v-model="slotProps.form.email" name="email" /><br />
+        <input v-model="slotProps.value.email" name="email" /><br />
 
         <label>Message:</label><br />
-        <textarea v-model="slotProps.form.message" name="message"></textarea
+        <textarea v-model="slotProps.value.message" name="message"></textarea
         ><br />
 
         <button @click="slotProps.submit">Submit</button><br />
