Connect to secure mqtt broker.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       components: { Component },
       data() {
         return {
-          mqttHost: "ws://public.trxbroker.org:9001/mqtt",
+          mqttHost: "wss://public.trxbroker.org/mqtt",
         };
       },
     }).mount("#MqttVueContactForm");
