Refactoring for security improvment.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </body>
   <script type="module">
     // import Component from "https://unpkg.com/@trx-base/mqtt-vue-contact-form";  //production
-    import Component from "./dist/component.js";
+    import Component from "./src/component.js";
     Vue.createApp({
       components: { Component },
       data() {
